Fixed: wrong removed(TimeUnit) result when persisted data is incomplete
- recovered correct result